# DefiLlama_tvl_downloader

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/defillama_tvl_downloader/: __init__.py  defillama_tvl_downloader.py  protocol_tvl_ts.py  top_protocols.py
tests/: test_defillama_tvl_downloader.py
